# g-type

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: audit.yml  ci.yml  msrv.yml
src/: aliases.rs  lib.rs  serde.rs
tests/: serde_test.rs  test.rs
